--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 jobs:
   include:
-    - name: "Python 3.8 on Bionic Linux"
+    - name: "Python 3.8 on Focal Linux"
       os: linux
-      dist: bionic
+      dist: focal
       python: 3.8
     - name: "Python 3.8.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
